# LibraryManager

./: .clang-format  .gitignore  CMakeLists.txt  Conception.md  DomainRules.md  Exo librairie.md  LibraryManager.kdev4  Notes.txt  Readme.md  mermaid.mermaid
.kdev4/: LibraryManager.kdev4
includes/: Book.h  BookLibrary.h  Library.h  LibraryFunction.h  Livre.h
includes/domain/: ValueObject.h
includes/domain/entities/: Book.hpp  Loan.hpp  Reservation.hpp  Review.hpp  User.hpp
includes/domain/factories/: BookFactory.hpp  LoanFactory.hpp  ReservationFactory.hpp  ReviewFactory.hpp  UserFactory.hpp
includes/domain/services/: Library.hpp
includes/domain/value-objects/: Email.hpp
includes/entities/: Book.hpp  Loan.hpp  Reservation.hpp  Review.hpp  User.h  User.hpp
includes/infra/dtos/: BookPersistenceDto.hpp  LoanPersistenceDto.hpp  ReservationPersistenceDto.hpp  ReviewPersistenceDto.hpp  UserPersistenceDto.hpp
includes/infra/mappers/: BookMapper.hpp  LoanMapper.hpp  ReservationMapper.hpp  ReviewMapper.hpp  UserMapper.hpp
includes/infra/repository/: BookRepository.hpp  LoanRepository.hpp  ReservationRepository.hpp  ReviewRepository.hpp  UserRepository.hpp
includes/services/: NotificationSystem.hpp  RecommendationSystem.hpp
includes/shared/core/: Guard.hpp  Guard.tpp  Result.hpp  Result.tpp
includes/shared/domain/: Entity.hpp  Entity.tpp  Factory.hpp  ValueObject.hpp  ValueObject.tpp
includes/shared/exceptions/: Exceptions.hpp
includes/value-objects/: Email.h  Email.hpp  ValueObject.h
src/: Book.cpp  BookLibrary.cpp  Library.cpp  LibraryFunction.cpp  main.cpp
src/domain/: ValueObject.cpp
src/entities/: Book.cpp  Loan.cpp  Reservation.cpp  Review.cpp  User.cpp
src/value-objects/: Email.cpp
(+26 files in other folders)
